# FreqFlowMatching

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
cmd/: sample.py  train.py
cmd/conf/: sample.yaml  train.yaml
cmd/conf/datamodule/: ecg.yaml  gaussian.yaml  mimiciii.yaml  nasa.yaml  nasdaq.yaml  synthetic.yaml  usdroughts.yaml
cmd/conf/metrics/: default.yaml
cmd/conf/sampler/: default.yaml
cmd/conf/trainer/callbacks/: default.yaml
cmd/conf/velocity_model/: default.yaml  lstm.yaml  mlp.yaml
cmd/conf/velocity_model/path/: default.yaml
cmd/conf/velocity_model/path/scheduler/: default.yaml
cmd/scripts/: sample.sh  train.sh
src/fmfourier/dataloaders/: datamodules.py
src/fmfourier/models/: velocity_models.py
src/fmfourier/paths/: paths.py  scheduler.py
src/fmfourier/sampling/: metrics.py  sampler.py
src/fmfourier/utils/: callbacks.py  dataclasses.py  extraction.py  fourier.py  losses.py  wandb.py
tests/: test_datamodules.py  test_metrics.py  test_paths.py  test_sampling.py  test_schedulers.py  test_transformer.py  test_utils.py  test_velocity_models.py
