[project]
name = "fmfourier"

version = "0.1.0"

description = "Flow Matching in the Fourier Domain for Time Series Generation"
 
readme = "README.md"

requires-python = ">=3.10"

license = {file = "LICENSE"}

keywords = ["flow matching", "time", "series", "fourier", "frequency", "generative", "machine", "learning", "ai"]

authors = [
  {name = "Nicolas Huynh", email = "nicolas.huynh99@gmail.com" }
]

maintainers = [
  {name = "Nicolas Huynh", email = "nicolas.huynh99@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Researchers",

  "Topic :: Generative AI :: Flow Matching",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.10",
]

dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "lightning",
  "kaggle",
  "seaborn",
  "pandas",
  "transformers",
  "diffusers[torch]",
  "ipython",
  "hydra-core",
  "wandb",
  "tables",
  "einops",
  "SciencePlots",
  "POT==0.9.1",
  "numpy==1.26.0",
  "scipy==1.11.4",
]


[project.optional-dependencies]
test = [
  "pytest",
  "coverage",
  "mypy",
  "black",
  "pytest-cov",
  "pytest-mypy",
  "pytest-black",
  "pytest-isort",
  "pytest-flakes",
  "pre-commit",
  "types-PyYAML"
]

[project.urls]
"Homepage" = "https://github.com/nicolashuynh/FourierFlowMatching"
"Source" = "https://github.com/nicolashuynh/FourierFlowMatching"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --flakes --isort --mypy --cov --cov-report html --cov-report term"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    '.*wandb.*'
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
